# product-taxonomy-classifier-demo

./: .gitignore  Makefile  README.md  pyproject.toml
data/: products.csv  unlabeled_products.csv
examples/: model_report.md  predictions.csv  review_queue.csv
src/product_taxonomy_classifier/: __init__.py  __main__.py  cli.py  model.py  text.py  validation.py
tests/: test_cli.py  test_model.py  test_validation.py
