[project]
name = "product-taxonomy-classifier-demo"
version = "0.1.0"
description = "Synthetic product taxonomy classification and review queue demo"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
product-taxonomy = "product_taxonomy_classifier.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
